--- a/.github/workflows/build-fantasytyx-bv.yml
+++ b/.github/workflows/build-fantasytyx-bv.yml
@@ -1,21 +1,24 @@
 name: build-fantasytyx-bv
 
 on:
-  push:
-    branches: [ develop ]
-  pull_request:
-    branches: [ develop ]
   workflow_dispatch:
+  workflow_call:
 
 env:
   JDK_VERSION: '21'
   ANDROID_COMPILE_SDK: '36'
   ANDROID_BUILD_TOOLS: '36.0.0'
+  GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      # 阶段 0: 环境变量初始化
+      - name: Initialization values
+        run: |
+          echo "BV_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
+
       # 阶段 1: 并行克隆两个仓库
       - name: Checkout MAIN source repo (fantasy-bv)
         uses: actions/checkout@main
@@ -30,7 +33,6 @@ jobs:
         uses: actions/checkout@main
         with:
           repository: zxgv5/bv-libs
-          # 关键：根据实际分支修改，可能是 main, master 或其他
           ref: main
           path: bv-libs-source
 
@@ -64,13 +66,13 @@ jobs:
               rm -rf "$DEST_PATH"
               # 复制整个库目录（包含 .aar 和 .kts 等所有文件）
               cp -r "$SRC_PATH" "$DEST_PATH"
-              echo "  ✅ 已复制到: $DEST_PATH"
+              echo "  已复制到: $DEST_PATH"
               # 显示复制后的关键文件
               if [ -f "$DEST_PATH"/*.aar ]; then
                 echo "  包含AAR文件: $(ls "$DEST_PATH"/*.aar | head -1 | xargs basename)"
               fi
             else
-              echo "  ❌ 错误：源路径不存在！"
+              echo "  错误：源路径不存在！"
               echo "  当前bv-libs-source目录内容:"
               ls -la "../bv-libs-source/" || true
               exit 1
@@ -80,7 +82,7 @@ jobs:
           
           echo "=== 合并完成，最终 libs/ 目录结构 ==="
           ls -la libs/
-
+ 
       # 阶段 3: 设置构建环境
       - name: Cache Gradle
         uses: actions/cache@main
@@ -92,7 +94,7 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('fantasy-bv-source/gradle/wrapper/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-
+ 
       - name: Set up JDK
         uses: actions/setup-java@main
         with:
@@ -104,8 +106,7 @@ jobs:
         with:
           api-level: ${{ env.ANDROID_COMPILE_SDK }}
           build-tools: ${{ env.ANDROID_BUILD_TOOLS }}
-          # 由于是预编译库，NDK和CMake可能不是必需的，但保留以防万一
-          # ndk: '25.2.9519653'  # 如果后续编译akdanmaku需要NDK，请取消注释
+          accept-android-sdk-licenses: true
 
       # 阶段 4: 应用项目特定配置
       - name: Fix App Version Calculation
@@ -120,7 +121,7 @@ jobs:
           else
             echo "警告: 未找到 $config_file，跳过版本修改。"
           fi
-
+ 
       # 阶段 5: 验证与准备构建
       - name: Validate Final Project Structure
         working-directory: ./fantasy-bv-source
@@ -139,18 +140,33 @@ jobs:
           echo ""
           echo "2. 验证源码模块:"
           if [ -f "akdanmaku/build.gradle.kts" ] || [ -f "akdanmaku/build.gradle" ]; then
-            echo "  ✅ akdanmaku - 找到构建文件"
+            echo "  akdanmaku - 找到构建文件"
           else
-            echo "  ❌ akdanmaku - 缺少构建文件！"
+            echo "  akdanmaku - 缺少构建文件！"
             exit 1
           fi
-
+ 
       - name: Prepare Gradle Environment
         working-directory: ./fantasy-bv-source
         run: |
           chmod +x gradlew
           echo "Gradle 版本信息:"
           ./gradlew --version
+
+      - name: Decode and Write Release Keystore
+        working-directory: ./fantasy-bv-source
+        run: |
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > keystore.jks
+
+      - name: Write signing.properties for Release Build
+        working-directory: ./fantasy-bv-source
+        run: |
+          cat <<EOF > signing.properties
+          keystore.path=keystore.jks
+          keystore.pwd=${{ secrets.KEYSTORE_PASSWORD }}
+          keystore.alias=${{ secrets.KEY_ALIAS }}
+          keystore.alias_pwd=${{ secrets.KEY_ALIAS_PASSWORD }}
+          EOF
 
       # 阶段 6: 顺序构建（先编译akdanmaku，再构建主应用）
       - name: Build Danmaku Module (akdanmaku)
@@ -159,7 +175,7 @@ jobs:
           echo "=== 开始编译弹幕库 (akdanmaku) ==="
           ./gradlew :akdanmaku:assembleRelease --no-daemon --stacktrace
           echo "=== akdanmaku 编译完成 ==="
-
+ 
       - name: Build Main Application
         working-directory: ./fantasy-bv-source
         run: |
@@ -167,53 +183,43 @@ jobs:
           ./gradlew :app:assembleRelease --no-daemon --stacktrace
           
           echo ""
-          echo "=== 🎉 构建完成！查找APK产物 ==="
+          echo "=== 构建完成！查找APK产物 ==="
           find . -name "*.apk" -type f | grep -i release | while read apk; do
-            echo "  📦 $(ls -lh "$apk")"
+            echo "  $(ls -lh "$apk")"
           done || echo "未找到APK文件，请检查构建日志。"
-
+ 
       # 阶段 7: 收集与上传结果
-      - name: Upload APK Artifacts
-        if: success()
-        uses: actions/upload-artifact@main
-        with:
-          name: release-apks
-          path: |
-            fantasy-bv-source/app/build/outputs/apk/**/*release*.apk
-            fantasy-bv-source/akdanmaku/build/outputs/aar/**/*release*.aar
-          if-no-files-found: error
-          retention-days: 30
+      # - name: Upload APK Artifacts
+      #   if: success()
+      #   uses: actions/upload-artifact@main
+      #   with:
+      #     name: release-apks
+      #     path: |
+      #       fantasy-bv-source/app/build/outputs/apk/**/*release*.apk
+      #       fantasy-bv-source/akdanmaku/build/outputs/aar/**/*release*.aar
+      #     if-no-files-found: error
+      #     retention-days: 30
 
-      - name: Upload Build Logs for Debugging
-        if: always()
-        uses: actions/upload-artifact@main
-        with:
-          name: build-reports-and-libs
-          path: |
-            fantasy-bv-source/**/build/reports/
-            # 上传复制后的libs目录结构以供验证
-            fantasy-bv-source/libs/
-          retention-days: 7
+      # - name: Upload Build Logs for Debugging
+      #   if: always()
+      #   uses: actions/upload-artifact@main
+      #   with:
+      #     name: build-reports-and-libs
+      #     path: |
+      #       fantasy-bv-source/**/build/reports/
+      #       # 上传复制后的libs目录结构以供验证
+      #       fantasy-bv-source/libs/
+      #     retention-days: 7
 
       - name: Create GitHub Release & Upload APK
-        # 通常我们只为特定事件（如打标签）创建正式发布，避免每次提交都产生大量Release。
-        # 这里示例：当推送的标签符合 ‘v*’ 模式（如 v1.0.0）时触发。
-        if: startsWith(github.ref, 'refs/tags/v')
         uses: softprops/action-gh-release@master
         with:
-          # 发布名称，默认使用标签名
-          name: Release ${{ github.ref_name }}
-          # 从文件生成发布说明，此处示例为读取 CHANGELOG.md。
-          # 你也可以使用 `body: |` 直接写字符串，或留空。
-          body_path: CHANGELOG.md
+          tag_name: ${{env.BV_DATE}}-fantasybv
+          # tag_name: latest-release
           # 要附加到此次发布的文件列表
           files: |
-            fantasy-bv-source/app/build/outputs/apk/release/*.apk
-            fantasy-bv-source/akdanmaku/build/outputs/aar/*release*.aar
+            fantasy-bv-source/app/build/outputs/apk/default/release/*.apk
           # 设置为 true 则每次运行覆盖同名草稿，适用于持续集成测试版
           draft: false
           # 是否为预发布版本
           prerelease: false
-        env:
-          # 使用自动生成的 GITHUB_TOKEN 进行认证
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
